src/styles/halpes.css
/* ... */
.main-menu__right-social a+a {
  margin-left: 10px;
}

.main-menu__right-social a:hover {
  color: #ffffff;
  background: var(--thm-blue);
}

.main-menu__two .main-menu__cart {
  margin-right: 0;
}

.main-menu__two .main-menu__list>li,
.stricky-header.main-menu__two .main-menu__list>li {
  padding-top: 24px;
  padding-bottom: 24px;
}

.stricky-header.main-menu__two .main-menu__inner {
  padding: 0 0;
}

.stricky-header.main-menu__two {
  padding: 0 0;
}

/*--------------------------------------------------------------
# Navigations Three
--------------------------------------------------------------*/
.main-header-three {
  position: relative;
  display: block;
}

.main-header-three__menu-box {
  position: relative;
  display: block;
  padding: 0 30px;
  /* box-shadow: 0px 10px 60px 0px rgba(0, 0, 0, 0.05); */
}

@media (min-width: 992) {
  .main-header-three__menu-box {
    padding: 0 60px;
    align-self: center;
  }
}
/* 
.main-menu-three__logo-top {
  position:relative;
  display: block;
  float:left;
  overflow:visible;
  height: 0px;
  width: auto;
  left: 11vw;
} 
*/

.main-menu-three__container {
  display: inline;
  background-color: #ffff;
  max-width: 100%;
  padding-left: 0;
  padding-right: 0;
}
.main-menu-three__logo-top {
  position: relative;
  display: flex;
  /* background-color: black; */
  top: 11%;
  max-width: 100%;

}


.main-menu-three__logo-top img{
  position: relative;
  width: 100%;
  height: auto;
}


.main-menu-three__logo {
  position: relative;
  display: block;
  /* max-width: 180px; */
  /* float: left; */
  /* text-align: center; */
}
.main-menu-three__logo img{
  width: 13vh;
  height: auto;
  margin: 10px 40px 10px 0px;
}

.main-menu-three__inner-upper {
  position: relative;
  display: flex;
  align-items: center;
  /* margin-left: 150px; */
  justify-content: center;
  width: 100%;
  float: right;
  /* padding: 47px 0 47px 0; */
}

.main-menu-three__btn {
  margin-right: 60px;
}

.main-menu-three__donate-btn {
  font-size: 14px;
  color: #ffffff;
  font-weight: 900;
  background: var(--thm-blue);
  display: inline-block;
  padding: 7px 20px;
  transition: all 500ms ease;
}

.main-menu-three__donate-btn i {
  margin-right: 7px;
  font-size: 12px;
}

.main-menu-three__donate-btn:hover {
  color: var(--thm-black);
}

.main-menu__right-three {
  position: relative;
  float: right;
  padding-left: 0;
  padding: 36.5px 0;
}

.main-menu__right-three:before {
  display: none;
}

.main-menu__right-three .main-menu__search {
  padding: 5.5px 0;
}

.main-menu__right-three .main-menu__cart {
  padding: 5.5px 0;
  margin-right: 0;
}

.main-menu-three__inner .main-menu__list>li,
.stricky-header.main-menu-three .main-menu__list>li {
  padding-top: 39.5px;
  padding-bottom: 38.5px;
}

.main-menu-three-mobile__logo {
  height: auto;
  width: 50%;
  /* background-color: #000; */
  float: left;
}

.main-menu-three-mobile__logo img{
  max-width: 80%;
  width: 7rem;
  padding: 5px 5px 5px 5px;
}
/* .container-width-override {
  max-width: 100%;
  padding-left: 0;
  padding-right: 0;
} */

/*--------------------------------------------------------------
# Animations
--------------------------------------------------------------*/
@keyframes bubbleMover {
  0% {
    -webkit-transform: translateY(0px) translateX(0) rotate(0);
    transform: translateY(0px) translateX(0) rotate(0);
  }

  30% {
    -webkit-transform: translateY(30px) translateX(50px) rotate(15deg);
    transform: translateY(30px) translateX(50px) rotate(15deg);
    -webkit-transform-origin: center center;
    transform-origin: center center;
  }

  50% {
    -webkit-transform: translateY(50px) translateX(100px) rotate(45deg);
    transform: translateY(50px) translateX(100px) rotate(45deg);
    -webkit-transform-origin: right bottom;
    transform-origin: right bottom;
  }

  80% {
    -webkit-transform: translateY(30px) translateX(50px) rotate(15deg);
    transform: translateY(30px) translateX(50px) rotate(15deg);
    -webkit-transform-origin: left top;
    transform-origin: left top;
  }

  100% {
    -webkit-transform: translateY(0px) translateX(0) rotate(0);
    transform: translateY(0px) translateX(0) rotate(0);
    -webkit-transform-origin: center center;
    transform-origin: center center;
  }
}

@keyframes shapeMover {

  0%,
  100% {
    transform: perspective(400px) translateY(0) rotate(0deg) translateZ(0px) translateX(0);
  }

  50% {
    transform: perspective(400px) rotate(0deg) translateZ(20px) translateY(20px) translateX(20px);
  }
}

@keyframes banner3Shake {
  0% {
    -webkit-transform: rotate3d(0, 1, 0, 0deg);
    transform: rotate3d(0, 1, 0, 0deg);
  }

  30% {
    -webkit-transform: rotate3d(0, 0, 1, 5deg);
    transform: rotate3d(0, 0, 1, 5deg);
  }

  60% {
    -webkit-transform: rotate3d(1, 0, 0, 0deg);
    transform: rotate3d(1, 0, 0, 0deg);
  }

  80% {
    -webkit-transform: rotate3d(0, 0, 1, 5deg);
    transform: rotate3d(0, 0, 1, 5deg);
  }

  100% {
    -webkit-transform: rotate3d(0, 1, 0, 0deg);
    transform: rotate3d(0, 1, 0, 0deg);
  }
}

@keyframes squareMover {

  0%,
  100% {
    -webkit-transform: translate(0, 0) rotate(0);
    transform: translate(0, 0) rotate(0);
  }

  20%,
  60% {
    -webkit-transform: translate(20px, 40px) rotate(180deg);
    transform: translate(20px, 40px) rotate(180deg);
  }

  30%,
  80% {
    -webkit-transform: translate(40px, 60px) rotate(0deg);
    transform: translate(40px, 60px) rotate(0deg);
  }
}

@keyframes treeMove {

  0%,
  100% {
    -webkit-transform: rotate(0deg) translateX(0);
    transform: rotate(0deg) translateX(0);
  }

  25%,
  75% {
    -webkit-transform: rotate(5deg) translateX(15px);
    transform: rotate(5deg) translateX(15px);
  }

  50% {
    -webkit-transform: rotate(10deg) translateX(30px);
    transform: rotate(10deg) translateX(30px);
  }
}
/* ... */

